--- a/GUI.html
+++ b/GUI.html
@@ -1,11 +1,7 @@
 <head>
   <body>
     <script src="AES.jsx"></script>
-    <input
-      id="inputBox"
-      placeholder="Enter text to encrypt"
-      default="Thats my Kung Fu"
-    />
+    <input id="inputBox" placeholder="Enter text to encrypt" />
     <input id="keyBox" placeholder="Enter key" />
     <input id="outputBox" placeholder="Expected Output" disabled />
     <button id="buttonAES" onClick="main(this)">Run AES</button>
