--- a/GUI.html
+++ b/GUI.html
@@ -1,8 +1,12 @@
 <head>
   <body>
     <script src="AES.jsx"></script>
-    <input id="inputBox" placeholder="Enter text to encrypt" />
-    <input id="keyBox" placeholder="Enter key" />
+    <input
+      id="inputBox"
+      placeholder="Enter text to encrypt"
+      value="Two One Nine Two"
+    />
+    <input id="keyBox" placeholder="Enter key" value="Thats my Kung Fu" />
     <input id="outputBox" placeholder="Expected Output" disabled />
     <button id="buttonAES" onClick="main(this)">Run AES</button>
   </body>
