--- a/GUI.html
+++ b/GUI.html
@@ -1,6 +1,6 @@
 <head>
   <body>
-    <script src="AES.jsx"></script>
+    <script src="AES.js"></script>
     <input
       id="inputBox"
       placeholder="Enter text to encrypt"
